2005-06-14  Nick Roberts  <nickrob@snap.net.nz>

	* mi/mi-main.c (mi_cmd_data_list_register_values): Remove test for
	registers now that mi_execute_command rewinds after an error.

2005-06-13  Mark Kettenis  <kettenis@gnu.org>

	* configure.ac: Use AC_CHECK_TYPES to check for uintptr_t.
	* configure, config.in: Regenerate.

	* ser-tcp.c: Tweak comment.
	[!HAVE_SOCKLEN_T]: Typedef socklen_t.
	* configure.ac: Add check for socklen_t.
	* configure, config.in: Regenerate.

2005-06-13  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/linux64.mt (TDEPFILES): Add symfile-mem.o.

2005-06-13  Richard Sandiford  <richard@codesourcery.com>

	* MAINTAINERS: Update my email address.

2005-06-13  Mark Mitchell  <mark@codesourcery.com>

	* corelow.c (core_open): Use bfd_fopen, not bfd_fdopenr.
	* exec.c (exec_file_attach): Likewise.
	* solib-frv.c (enable_break2): Likewise.
	* solib-svr4.c (enable_break): Likewise.
	* solib.c (solib_map_sections): Likewise.
	* symfile.c (symfile_bfd_open): Likewise.

2005-06-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (symfile.o): Add $(exec_h).
	* exec.h (exec_set_section_address): Add prototype.
	* exec.c (exec_set_section_address): New function.
	* symfile.c: Include "exec.h".
	(struct place_section_arg, place_section): New.
	(default_symfile_offsets): Call place_section for each
	section of a relocatable file.

2005-06-13  Joel Brobecker  <brobecker@adacore.com>

	* hppa-tdep.c (hppa_pc_requires_run_before_use): Really test all
	bits of top byte in address.

2005-06-13  Wu Zhou  <woodzltc@cn.ibm.com>

	* eval.c (evaluate_subexp_standard): Add code to check the target
	type of a TYPE_CODE_PTR value when we encounter a f77 undetermined
	arglist.  If it is array, string or function, work on the target
	value instead.

2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>
	    Nick Roberts  <nickrob@snap.net.nz>

	* mi/mi-main.c (register_changed_p, get_register): Use
	get_selected_frame.